--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSP Editor</title>
+    <title>SS Studio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -51,7 +51,7 @@
             <p>
                 Bir yazılım ekibi...
             </p>
-            <a href="#" class="btn">
+            <a href="./toomp.html" class="btn">
                 Bende Katılacağım <i class="fas fa-chevron-right"></i>
             </a>
         </header>
@@ -122,7 +122,7 @@
             <div class="content">
                 <h2>Daha iyi bir olanak sunuyoruz...</h2>
                 <p>Toomp Studio'ya katılırsanız, oyunlarınızı inceleyip eğer oyununuzda virüs, sıkıntı yoksa ücretsiz şekilde yazılımcıların yayınlama hakkı var.</p>
-                <a href="#" class="btn">
+                <a href="./toomp.html" class="btn">
                     Bende Katılmak İstiyorum <i class="fas fa-chevron-right"></i>
                 </a>
             </div>
